JumpScript/tests/baselines/reference/moduleAugmentationInDependency2.errors.txt
/node_modules/A/index.jump(1,16): error TS2664: Invalid module name in augmentation, module 'ext' cannot be found.


==== /node_modules/A/index.jump (1 errors) ====
    declare module "ext" {
                   ~~~~~
!!! error TS2664: Invalid module name in augmentation, module 'ext' cannot be found.
    }
    export {};
    
==== /src/app.jump (0 errors) ====
    import "A"